syntax = "proto3";

package payment;

option go_package = "./proto/payment;payment";

service Payment {
	rpc AddPayment(PaymentInfo) returns (PaymentID) {}
	rpc UpdatePayment(PaymentInfo) returns (Response) {}
	rpc DeletePayment(PaymentID) returns (Response) {}
	rpc FindPaymentByID(PaymentID) returns (PaymentInfo) {}
	rpc FindAllPament(All) returns (PaymentAll) {}
}

message PaymentInfo {
	int64 id = 1;
	string payment_name = 2;
	string payment_sid = 3;
	bool payment_status = 4;
	string payment_image = 5;
}

message PaymentID {
	int64 payment_id = 1;
}

message Response {
	string msg = 1;
}

message All {

}

message PaymentAll {
	repeated PaymentInfo payment_info = 1;
}